# truenas-scripts

./: .gitignore  README.md  pyproject.toml
src/truenas_client/: __init__.py  import_truenas_cert.py  truenas.py
