[tool.poetry]
name = "push-cert-truenas"
version = "0.1.0"
description = ""
authors = ["Thomas Gaudin <thomas.gaudin@centraliens-lille.org>"]
readme = "README.md"
packages = [
    { include = "truenas_client", from = "src" }
]

[tool.poetry.scripts]
import-truenas-cert = "truenas_client.import_truenas_cert:entrypoint_sync"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.mypy]
files = "src/truenas_client"
pretty = true
plugins = "pydantic.mypy"
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
